Adjust metadata.tex to new option syntax

--- a/examples/metadata.tex
+++ b/examples/metadata.tex
@@ -58,7 +58,7 @@
 \end{SessionBlock}
 
 % a semester break of two weeks
-\SetBreaks[weeks=2,span={10.\,--\,23.\,06.}]{Osterferien}
+\SetBreaks[units=2,span={10.\,--\,23.\,06.}]{Osterferien}
 
 % start a new frame in beamer
 \SetBeamerFrameBreak
