--- a/README
+++ b/README
@@ -18,8 +18,8 @@ The jslectureplanner package facilitates the generation and managment
 of university course material. It provides an interface to set up and
 access centralized course data that can be reused in all course documents.
 Furthermore, the package is able to calculate the session dates of
-a whole semester and generate course programs, if the course is held
-weekly and the date of the first lecture is specified. Moreover,
+a whole semester and generate course programs, if the course is held in a
+regular interval and the date of the first session is specified. Moreover,
 the package can be used to generate a sectioned course bibliography
 via biblatex.
 
