--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -51,7 +51,7 @@ metadata file.
 
 To further facilitate the planning, the package is able to calculate
 the session dates of a whole semester, if the sessions of the course
-follow a regular interval.
+follow at regular intervals.
 You only need to set the date of the first lecture, the package does
 the rest. Moreover, the package can be used to generate a sectioned
 bibliography for the course via \textsf{biblatex}.
