--- a/README
+++ b/README
@@ -18,10 +18,10 @@ The jslectureplanner package facilitates the generation and managment
 of university course material. It provides an interface to set up and
 access centralized course data that can be reused in all course documents.
 Furthermore, the package is able to calculate the session dates of
-a whole semester and generate course programs, if the course is held in a
-regular interval and the date of the first session is specified. Moreover,
-the package can be used to generate a sectioned course bibliography
-via biblatex.
+a whole semester and generate course programs, if the sessions follow at
+regular intervals and the date of the first session is specified.
+Moreover, the package can be used to generate a sectioned course
+bibliography via biblatex.
 
 
 == CONTENTS ==
