Some refinements in the manual

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ==================================================================
 The jslectureplanner package
 
-A package to help managing university courses.
+A LaTeX package to help managing university courses.
 
 Maintained by Jürgen Spitzmüller
 E-mail: juergen (at) spitzmueller (dot) org
