--- a/jslectureplanner.sty
+++ b/jslectureplanner.sty
@@ -21,8 +21,8 @@
 %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\def\filedate{2015/01/18}
-\def\fileversion{0.9dev}
+\def\filedate{2015/02/08}
+\def\fileversion{0.9}
 \def\filename{jslectureplanner.sty}
 
 \NeedsTeXFormat{LaTeX2e}
