--- a/jslectureplanner.tex
+++ b/jslectureplanner.tex
@@ -29,7 +29,7 @@
 \author{Jürgen Spitzmüller%
 \thanks{Please report issues via \protect\url{https://github.com/jspitz/jslectureplanner}.}}
 
-\date{Version 0.9dev, 2015/01/18}
+\date{Version 0.9, 2015/02/08}
 
 \maketitle
 
@@ -227,7 +227,7 @@ the first session (argument\emph{ must} have the form DD/MM/YYYY)
 
 \clearpage
 
-\section{Setting up a course plan\label{sec:lecplan}}
+\section{Setting up a course schedule\label{sec:lecplan}}
 
 In the metadata file, you can set up a schedule for the course by entering
 session information in chronological order. This is done via the following
@@ -367,10 +367,10 @@ e-learning platform
 \item \jcsmacro{officehours}: Outputs the office hours
 \end{itemize}
 
-\subsection{Generating lecture programs}
+\subsection{Generating course programs}
 \label{sec:lecprog}
 \begin{itemize}
-\item \jcsmacro{makeprogram}: Generates a lecture program
+\item \jcsmacro{makeprogram}: Generates a course program
 from the metadata in the form
 
 
@@ -603,7 +603,7 @@ them for inclusion to the package.
 \section{History}
 
 \begin{itemize}
-\item forthcoming (v. 0.9): Add a way to adjust the interval between two sessions
+\item 2015/02/08 (v. 0.9): Add a way to adjust the interval between two sessions
     (\joption{interval} package option and \jcsmacro{LecInternal} macro); add a way to shift
     session dates from the regular interval (\jcsmacro{SetLecOffset}); rename option \joption{weeks}
     of the \jcsmacro{SetBreaks} macro to \joption{units} (\joption{weeks} still works, but is
